Adding further styling to show page, added iframe map to index page

--- a/app/views/detention_centers/index.html.erb
+++ b/app/views/detention_centers/index.html.erb
@@ -1,5 +1,12 @@
+<br><br><br><br>
+
+<div class="container">
+    <iframe width="100%" height="520" frameborder="50" src="https://wilbertom.cartodb.com/viz/df1b09ee-2aaf-11e6-82a2-0e674067d321/embed_map" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
+</div>
+
 <h1> INDEX</h1>
 <!-- Page Features -->
+
 <div class="row text-center">
 
     <div class="col-md-3 col-sm-6 hero-feature">
