--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -16,7 +16,27 @@
  *= require_self
  */
 
+
+.
+
 .content {
-	padding-top: 80px;
+	padding-top: 100px;
 	padding-bottom: 50px;
 }
+
+.col-1-3 {
+	width: 33.33%;
+}
+
+.col-2-3 {
+	width: 33.33%;
+}
+
+.col-1-2 {
+	width:50%;
+}
+
+.col-1-2 {
+	width:50%;
+}
+
