Hardcoding Eloy Operator name

--- a/app/views/detention_centers/show.html.erb
+++ b/app/views/detention_centers/show.html.erb
@@ -19,7 +19,7 @@
 				<td colspan="2" align="center"><h2><u>Operator</u></h2></td>
 			</tr>
 			<tr>
-				<td colspan="2"><h1><%= @detention_center.operator.name %></h1></td>
+				<td colspan="2"><h1>Corrections Corporation Of America</h1></td>
 			</tr>
 		</tbody>
 	</table>
